<resources>
    <string name="app_name">Internship 1Month</string>
    <string name="create">Create New Account</string>
    <string name="login">Login</string>
    <string name="enter_email">Email Id</string>
    <string name="enter_password">Password</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dob">Date Of Birth</string>
    <string name="dob_time">Birth Time</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="city">City</string>
    <string name="price_symbol">₹</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>