<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/aller_bold_18_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/signup" />

            <EditText
                android:id="@+id/home_name"
                style="@style/aller_regular_16_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:drawableLeft="@drawable/ic_profile_icon"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/home_email"
                style="@style/aller_regular_16_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/home_contact"
                style="@style/aller_regular_16_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/call"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/contact_no"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/home_password"
                style="@style/aller_regular_16_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_password_reset"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/home_confirm_password"
                style="@style/aller_regular_16_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_password_reset"
                android:drawablePadding="@dimen/_5sdp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/home_dateofbirth"
                style="@style/aller_regular_16_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/calendar"
                android:drawablePadding="@dimen/_5sdp"
                android:editable="false"
                android:hint="@string/dob" />

            <EditText
                android:id="@+id/home_time"
                style="@style/aller_regular_16_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableRight="@drawable/clock_24"
                android:drawablePadding="@dimen/_5sdp"
                android:editable="false"
                android:hint="@string/dob_time" />

            <RadioGroup
                android:id="@+id/signup_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signup_male"
                    style="@style/aller_bold_12_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/signup_female"
                    style="@style/aller_bold_12_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/signup_transgender"
                    style="@style/aller_bold_12_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/transgender" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/aller_bold_18_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/city" />

                <Spinner
                    android:popupBackground="@color/sky_blue"
                    android:background="@color/white"
                    android:id="@+id/signup_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp">

                <Button
                    android:id="@+id/home_login"
                    style="@style/aller_bold_18_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/home_signup"
                    style="@style/aller_bold_18_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:text="@string/signup" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>